Go back to having individual tags for each category, as string arrays are not working